<resources>
    <string name="app_name">Ambyar</string>

    <string-array name="daily">
        <item>wake</item>
        <item>market</item>
        <item>eat</item>
        <item>sleep</item>
    </string-array>

    <string-array name="description">
        <item>wake</item>
        <item>market</item>
        <item>eat</item>
        <item>sleep</item>
    </string-array>

    <string name="home">Home</string>
    <string name="daily">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="fav">Music Video</string>
    <string name="about">About Me</string>
    <string name="desc">Description</string>
    <string name="heading">HEADING</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="aboutme">Hello Guys, My Name is Ananda Salsabila. I am 20 years old. I was born on November 30, 1999. I live in Bandung. I majored in Informatics Engineering. I am a student from one of the universities in Indonesia.I hope you enjoy with My Self Apps, Thanks you much, for your Attention.</string>
    <string name="me">Hello Guys, My Name is Ananda Salsabila. You can call me Salsa.I live in Bandung. I majored in Informatics Engineering. I am a student from one of the universities in Indonesia.</string>
    <string name="ig">You want to be friends with me, check this out </string>
    <string name="my_hobby_is">My Hobby is</string>
    <string name="i_want_to_be">I Want to be</string>
    <string name="you_can_find_me_at">You can find me at</string>
    <string name="AboutAPK">ABOUT THIS APPS \nSDK VERSION 29 \nAPPS VERSION 1.0 \nMY SELF APPS V1.0 \nDESIGN BY ANANDA SALSABILA</string>
    <string name="myhome">Jl. Alam Raya, Buahbatu, Kec. Bojongsoang, Bandung, Jawa Barat 40287</string>
    <string name="todo">TODO</string>
</resources>
