<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider"
    tools:context=".AboutMe">

    <RelativeLayout
        android:id="@+id/imgWrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/imgHome"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/caca"
                app:civ_border_color="#fff"
                app:civ_border_width="2dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/desc_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutme"
            android:textColor="@color/white"
            android:layout_below="@+id/imgHome"
            android:textSize="@dimen/font16"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgWrp"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen20">
        <TextView
            android:id="@+id/desc_ig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ig"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ig"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgIG"
                    android:layout_width="@dimen/dimen60"
                    android:layout_height="@dimen/dimen60"
                    android:src="@drawable/ig"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen10">
        <TextView
            android:id="@+id/desc_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_can_find_me_at"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/findme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgFind"
                    android:layout_width="@dimen/dimen60"
                    android:layout_height="@dimen/dimen60"
                    android:src="@drawable/location1"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/findhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myhome"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font16" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/bot_nav"
        android:layout_marginBottom="@dimen/dimen20">

        <TextView
            android:id="@+id/aboutapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_marginBottom="@dimen/dimen20"
            android:textColor="@color/white"
            android:text="@string/AboutAPK"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bot_nav"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>