<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/imgWrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/imgHome"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/me"
                android:layout_width="@dimen/dimen120"
                android:layout_marginTop="@dimen/dimen60"
                android:layout_height="@dimen/dimen120"
                android:padding="@dimen/dimen5"
                android:src="@drawable/caca"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/desc_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textColor="@color/white"
            android:layout_below="@+id/imgHome"
            android:textSize="@dimen/font16"
            android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgWrp"
        android:layout_marginTop="@dimen/dimen20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txthobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_hobby_is"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font24"
                    android:gravity="center"/>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hobby"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/fish"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/traveller"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="@dimen/dimen20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/want"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_want_to_be"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font24"
                    android:gravity="center"/>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goals"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgoals"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/gold"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bot_nav"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>